# SinusSMPFinder

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  sstool.sln
sstool/: main.cpp  no_strings.hpp  patterns.inc  resources.rc  sstool.vcxproj
